--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: Scheduled Python Script
 
 on:
   schedule:
-    # Runs at 3 AM UTC+8 every day
-    - cron: '00 19 * * *'
+    - cron: '00 19 * * *'  # Runs at 19:00 UTC, which is 3 AM in China (UTC+8)
 
 jobs:
   run-script:
@@ -16,13 +15,16 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.9'
+        python-version: '3.9'  # Specify the Python version
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        # Install any dependencies here, for example:
-        pip install httpx
+        pip install httpx  # Install httpx
 
     - name: Run script
-      run: python path/to/your/script.py
+      env:
+        USERNAME: ${{ secrets.MY_USERNAME }}
+        PASSWORD: ${{ secrets.MY_PASSWORD }}
+      run: |
+        python 4ksj.py
